Fixed component overflow for .row elements and added emojis to navbar and menu categories on menu page

--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -20,6 +20,10 @@ p {
     scrollbar-color: var(--tertiary-color) #111;
 }
 
+.row {
+    width: 100% !important;
+}
+
 ::-webkit-scrollbar {
     width: 1rem;
 }
@@ -61,10 +65,19 @@ p {
         font-size: 1.4rem;
     }
 
+    a.dropdown-toggle::after {
+        margin-left: -.3rem;
+    }
+
     button.navbar-toggler {
         font-size: 2.5rem !important;
 
+        &:focus {
+            outline: none;
+        }
+
         .navbar-toggler-icon {
+            color: white;
             padding-top: .6rem;
         }
     }
@@ -81,23 +94,6 @@ p {
         }
     }
 
-    #delivery-banner {
-        position: absolute;
-        width: 100%;
-        margin: 0;
-        top: 10vh;
-        left: 0;
-        color: #f7f7f7;
-        transition: .8s
-    }
-
-    .add-delivery-banner-background {
-        // background-color: var(--tertiary-color);
-        background-color: rgba(255, 209, 102, .8);
-        color: #222 !important;
-        top: 8vh !important;
-    }
-
     #view-cart {
         height: 100%;
 
@@ -112,6 +108,24 @@ p {
     // background: linear-gradient(to right, var(--quarternary-color), var(--primary-color), var(--quanary-color)) !important;
     background: rgba(6, 214, 160, .75) !important;
     height: 8vh !important;
+}
+
+#delivery-banner {
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    margin: 0;
+    top: 10vh;
+    left: 0;
+    color: #f7f7f7;
+    transition: 1s
+}
+
+.add-delivery-banner-background {
+    // background-color: var(--tertiary-color);
+    background-color: rgba(255, 209, 102, .8);
+    color: #222 !important;
+    top: 8vh !important;
 }
 
 #header {
